Fixed the contact us button alignment, form is ready

--- a/app/sass/components/_contactUsForm.scss
+++ b/app/sass/components/_contactUsForm.scss
@@ -7,8 +7,8 @@
 
 	&__form {
 		display: grid;
-		grid-template-columns: max-content;
-		grid-gap: 3rem;
+		grid-template-columns: min-content;
+		grid-gap: 3rem 0;
 		justify-items: center;
 
 		&__input {
@@ -17,6 +17,12 @@
 			font-size: 1.5rem;
 			border-radius: 8px;
 			text-indent: 1.5rem;
+			border-width: none;
+			-webkit-box-shadow: 0px 10px 6px -6px rgba(black, 0.5);
+
+			&--requirement {
+				height: 7rem;
+			}
 		}
 
 		&__submit-button {
