--- a/app/sass/components/_contactUsModal.scss
+++ b/app/sass/components/_contactUsModal.scss
@@ -15,7 +15,7 @@
 	//grid-template-rows: 3rem;
 	justify-content: center;
 	align-items: start;
-	overflow: auto;
+	overflow: hidden;
 
 	//padding: 4rem;
 
