--- a/app/sass/components/_home.scss
+++ b/app/sass/components/_home.scss
@@ -5,7 +5,7 @@
 		//padding: 10rem;
 
 		display: grid;
-		grid-template-columns: min-content; //minmax(min-content, 1fr);
+		grid-template-columns: max-content; //minmax(min-content, 1fr);
 		grid-template-rows: 20vh;
 		justify-content: center;
 		align-items: center;
